--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+#root {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 500vh;
+  background-color: #fbf0e0;
+}
+
+.h1 {
+  font-size: 2rem;
+  font-weight: 700;
   text-align: center;
+  margin: 10px 0 0 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-align: center;
+  margin: 5px 0 0 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.h3 {
+  font-size: 1rem;
+  top: 10px;
+  font-weight: 500;
+  position: relative;
+  margin: 10px;
+  padding: 0;
 }
